1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* configure.in: Check for Makefile.appl.in instead of Makefile.rules.
	Test value of ac_R_space and ac_R_nospace to determine what to
	use for rpath option.  Add defaultdir, tclobjclibname, and bltlibname
	options.  Add check for -ldl.

	* Makefile.am (install-data-local): Install Makefile.appl to $(prefix).

1998-06-22  Alex Lancaster  <alex@santafe.edu>

	* NEWS: Added Release Notes for Swarm 1.2.

1998-06-21  Marcus G. Daniels  <mgd@mogollon.santafe.edu>

	* Makefile.am, Makefile.rules, configure.in, acconfig.h: New files;
	Add automake support.

1998-06-01  Marcus G. Daniels  <mgd@mogollon.santafe.edu>

	* AUTHORS, THANKS: Split.

1998-05-29  Alex Lancaster  <alex@santafe.edu>

	* INSTALL: Added the generic INSTALL instructions for building
	packages with 'configure'.  Required by GNU automake.

	* COPYING: Created from LICENCE.

	* AUTHORS: Created from Acknowledgements.  Changed to reflect
 	current affliations.

	* NEWS: Created from Release-Notes.

	* Release-Notes, Acknowledgements, LICENCE: All removed and
	renamed to NEWS, AUTHORS and COPYING, respectively, to comply with
	GNU automake conventions.

	* README: Reference to 'Release-Notes' is now to 'NEWS'.

1998-05-26  Alex Lancaster  <alex@santafe.edu>

	* Release-Notes: Reformatted Release-Notes into emacs
	outline-mode.

1998-05-23  Alex Lancaster  <alex@santafe.edu>

	* Makefile.conf (alex-SFI-Solaris): brought $SWARMCOMPILER
	conditionals into alignment with mgd-SFI-Solaris.
	(alex-SFI-Solaris): [PNGPREFIX,ZPREFIX]: Changed to /usr/local as
	per mgd-SFI-Solaris.

1998-05-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.conf: Use system versions of egcs-1.0.2 and gcc-2.8
	for mgd-SFI-Solaris.
	(PNGPREFIX, ZPREFIX): Change to /usr/local for SFI and mgd-SFI-Solaris.
	(OTHERLIBDIRS): Reorder in mgd-SFI-Solaris so tclobjc is before
	png/zlib.
	Use system gcc-2.7.2.3 for SFI and use renamed libtclobjc.gcc2.7.a.