@@ -1,0 +1,65 @@
+prefix = @prefix@
+includedir = @includedir@
+exec_prefix = @exec_prefix@
+libdir = @libdir@
+
+tcllibdir = @tcllibdir@
+tklibdir = @tklibdir@
+bltdir = @bltdir@
+tclobjcdir = @tclobjcdir@
+ffidir = @ffidir@
+zlibdir = @zlibdir@
+pngdir = @pngdir@
+
+CC = @CC@
+CFLAGS = @CFLAGS@
+
+MODULES = collections defobj activity objectbase random simtools tkobjc gui simtoolsgui space misc
+INCLUDES = -I$(includedir)
+
+TCLLDFLAGS = @TCLLDFLAGS@
+TKLDFLAGS = @TKLDFLAGS@
+BLTLDFLAGS = @BLTLDFLAGS@
+TCLOBJCLDFLAGS = @TCLOBJCLDFLAGS@
+FFILDFLAGS = @FFILDFLAGS@
+PNGLDFLAGS = @PNGLDFLAGS@
+
+TCLLIB = @TCLLIB@
+TKLIB = @TKLIB@
+BLTLIB = @BLTLIB@
+TCLOBJCLIB = @TCLOBJCLIB@
+FFILIB = @FFILIB@
+
+XPMLIB = -lXpm
+PNGLIB = -lpng
+ZLIBLIB = -lz
+
+X_LIBS = @X_LIBS@
+X_EXTRA_LIBS = @X_EXTRA_LIBS@
+X11LIBS = -lX11 $(X_EXTRA_LIBS)
+
+LDFLAGS = -L$(libdir) $(TCLOBJCLDFLAGS) $(BLTLDFLAGS) $(TCLLDFLAGS) $(TKLDFLAGS) $(FFILDFLAGS) $(PNGLDFLAGS) $(ZLIBLDFLAGS) $(X_LIBS)
+LINK = $(CC) $(CFLAGS) $(LDFLAGS) -o $@
+
+SYSLIBS = $(TCLOBJCLIB) $(BLTLIB) $(TKLIB) $(TCLLIB) $(XPMLIB) $(PNGLIB) $(ZLIBLIB) $(FFILIB) $(X11LIBS) -lobjc -lm
+
+SWARMLIBS = -lspace -lanalysis -lsimtoolsgui -ltkobjc -lsimtools -lactivity -lrandom -lobjectbase -lcollections -ldefobj -lmisc
+
+LIBS = @LIBS@
+
+all: $(APPLICATION)
+
+clean:
+	-rm -f $(OBJECTS) $(APPLICATION) $(OTHERCLEAN) core gmon.out
+
+$(APPLICATION): $(OBJECTS)
+	$(LINK) $(OBJECTS) $(SWARMLIBS) $(SYSLIBS) $(LIBS)
+
+.SUFFIXES: .m .xm
+
+.m.o:
+	$(CC) -c -Wno-import $(CFLAGS) $(INCLUDES) $<   
+
+# Local variables:
+# mode: makefile
+# end:
